--- a/gsoc/multi_pane2.html
+++ b/gsoc/multi_pane2.html
@@ -30,15 +30,9 @@
          }
          console.log(new_data);
 
-         var model1 = {data:{data1: new_data},panes: [{type:'rectangular', diagrams:[{type: 'histogram', data: 'data1', opti\
-                                                                                      ons: {value:'pnr'}}], filter: {target: 'x'}, options:{width:500, height:500, xrange: [0,1], yrange: [0,1000],grid:true, x_label:'PN\
-R', y_label:'Frequency', legend:false}}]};
-         var model2 = {data:{}, panes:[{type:'rectangular', diagrams:[{type:'bar', data: 'data1', options: {value:'mutation'\
-           }}],options:{width:800, height:500, xrange:['A>T','A>G','A>C','T>A','T>G','T>C','G>A','G>T','G>C','C>A','C>T','C>G'], yrange: [0,10\
-           00], grid:true, x_label:'individual 1', y_label:'Relative Conditions', legend:true, legend_options:{title: 'mutations'}}}]};
-         var model3 = {data:{}, panes:[{type:'rectangular', diagrams:[{type:'venn', data: 'data1', options: {category:'group',count:'nam\
-e',filter_control:true}}],options:{width:1000, height:500, xrange:[0,1], yrange: [0,1], grid:true, x_label:'', y_label:'', legend:t\
-           rue, legend_width:400, legend_options:{width:600, height:800}}}]};
+         var model1 = {data:{data1: new_data},panes: [{type:'rectangular', diagrams:[{type: 'histogram', data: 'data1', options: {value:'pnr'}}], filter: {target: 'x'}, options:{width:500, height:500, xrange: [0,1], yrange: [0,1000],grid:true, x_label:'PNR', y_label:'Frequency', legend:false}}]};
+         var model2 = {data:{}, panes:[{type:'rectangular', diagrams:[{type:'bar', data: 'data1', options: {value:'mutation'}}],options:{width:800, height:500, xrange:['A>T','A>G','A>C','T>A','T>G','T>C','G>A','G>T','G>C','C>A','C>T','C>G'], yrange: [0,1000], grid:true, x_label:'individual 1', y_label:'Relative Conditions', legend:true, legend_options:{title: 'mutations'}}}]};
+         var model3 = {data:{}, panes:[{type:'rectangular', diagrams:[{type:'venn', data: 'data1', options: {category:'group',count:'name',filter_control:true}}],options:{width:1000, height:500, xrange:[0,1], yrange: [0,1], grid:true, x_label:'', y_label:'', legend:true, legend_width:400, legend_options:{width:600, height:800}}}]};
 
          Nyaplot.core.parse(model1, '#vis1');
          Nyaplot.core.parse(model2, '#vis2');
